# breakmyagent-os

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  copilot-instructions.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: security_tests.yml
backend/: __init__.py  config.py  dependencies.py  main.py
backend/api/: __init__.py  router.py  schemas.py
backend/core/: __init__.py  attack_runner.py  evaluator.py
backend/services/: __init__.py  cache_service.py  errors.py  llm_client.py  telemetry.py  test_pipeline.py
data/: attacks.json
frontend/: app.py
tests/: test_api_error_mapping.py  test_cache_service.py  test_evaluator_parsing.py  test_test_pipeline.py  test_waitlist_endpoint.py
