[project]
name = "breakmyagent"
version = "0.1.0"
description = "AI Agent Safety Sandbox - Stress-test system prompts against adversarial attacks"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "litellm==1.55.10",
    "slowapi==0.1.9",
    "streamlit==1.41.1",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "httpx>=0.23.0,<0.28.0",
]
